[package]
name = "ping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
bevy_asset_loader = "0.17.0"
bevy_ggrs = { version = "0.13.0", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.7.0", features = ["ggrs"] }
bevy_prototype_lyon = "0.9.0"
bevy_rapier2d = { version = "0.22.0", features = [
    "enhanced-determinism",
    "wasm-bindgen",
] }
leafwing-input-manager = "0.10.0"
